v1.0.0/modules/schema/pages/class/ReadingInterharmonic.adoc
= `ReadingInterharmonic`
:toclevels: 4


+++Interharmonics are represented as a rational number 'numerator' / 'denominator', and harmonics are represented using the same mechanism and identified by 'denominator'=1.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ReadingInterharmonic`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`ReadingInterharmonic`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<denominator,`denominator`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Interharmonic denominator. Value 0 means not applicable. Value 2 is used in combination with 'numerator'=1 to represent interharmonic 1/2. Finally, value 1 indicates the harmonic of the order specified with 'numerator'.+++

| <<numerator,`numerator`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Interharmonic numerator. Value 0 means not applicable. Value 1 is used in combination with 'denominator'=2 to represent interharmonic 1/2, and with 'denominator'=1 it represents fundamental frequency. Finally, values greater than 1 indicate the harmonic of that order (e.g., 'numerator'=5 is the fifth harmonic).+++
|===

'''


//[discrete]
[#denominator]
=== `denominator`
+++Interharmonic denominator. Value 0 means not applicable. Value 2 is used in combination with 'numerator'=1 to represent interharmonic 1/2. Finally, value 1 indicates the harmonic of the order specified with 'numerator'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ReadingInterharmonic.denominator`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#numerator]
=== `numerator`
+++Interharmonic numerator. Value 0 means not applicable. Value 1 is used in combination with 'denominator'=2 to represent interharmonic 1/2, and with 'denominator'=1 it represents fundamental frequency. Finally, values greater than 1 indicate the harmonic of that order (e.g., 'numerator'=5 is the fifth harmonic).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ReadingInterharmonic.numerator`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===


